New debug at before Mid-Autumn Festival

--- a/showresul.ipynb
+++ b/showresul.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -32,21 +32,26 @@
     }
    ],
    "source": [
-    "path = \"/home/penghua/BasestaDect/src/dztz_0.csv\" \n",
-    "path1 = \"/home/penghua/BasestaDect/src/dztz_1.csv\"\n",
-    "path2 = \"/home/penghua/BasestaDect/src/dztz_2.csv\"\n",
-    "path3 = \"/home/penghua/BasestaDect/src/dztz_3.csv\"\n",
-    "path4 = \"/home/penghua/BasestaDect/src/dztz_4.csv\"\n",
-    "path5 = \"/home/penghua/BasestaDect/src/dztz_5.csv\"\n",
-    "path6 = \"/home/penghua/BasestaDect/src/dztz_6.csv\"\n",
-    "path7 = \"/home/penghua/BasestaDect/src/dztz_7.csv\"\n",
-    "path8 = \"/home/penghua/BasestaDect/src/dztz_8.csv\"\n",
-    "path9 = \"/home/penghua/BasestaDect/src/dztz_9.csv\"\n",
-    "path10 = \"/home/penghua/BasestaDect/src/dztz_10.csv\"\n",
-    "path11 = \"/home/penghua/BasestaDect/src/dztz_11.csv\"\n",
-    "path12 = \"/home/penghua/BasestaDect/src/dztz_12.csv\"\n",
-    "path13 = \"/home/penghua/BasestaDect/src/dztz_13.csv\"\n",
-    "path14 = \"/home/penghua/BasestaDect/src/dztz_14.csv\"\n",
+    "path = \"/home/penghua/BasestaDect/src/csv_data/dztz_0.csv\" \n",
+    "path1 = \"/home/penghua/BasestaDect/src/csv_data/dztz_1.csv\"\n",
+    "path2 = \"/home/penghua/BasestaDect/src/csv_data/dztz_2.csv\"\n",
+    "path3 = \"/home/penghua/BasestaDect/src/csv_data/dztz_3.csv\"\n",
+    "path4 = \"/home/penghua/BasestaDect/src/csv_data/dztz_4.csv\"\n",
+    "path5 = \"/home/penghua/BasestaDect/src/csv_data/dztz_5.csv\"\n",
+    "path6 = \"/home/penghua/BasestaDect/src/csv_data/dztz_6.csv\"\n",
+    "path7 = \"/home/penghua/BasestaDect/src/csv_data/dztz_7.csv\"\n",
+    "path8 = \"/home/penghua/BasestaDect/src/csv_data/dztz_8.csv\"\n",
+    "path9 = \"/home/penghua/BasestaDect/src/csv_data/dztz_9.csv\"\n",
+    "path10 = \"/home/penghua/BasestaDect/src/csv_data/dztz_10.csv\"\n",
+    "path11 = \"/home/penghua/BasestaDect/src/csv_data/dztz_11.csv\"\n",
+    "path12 = \"/home/penghua/BasestaDect/src/csv_data/dztz_12.csv\"\n",
+    "path13 = \"/home/penghua/BasestaDect/src/csv_data/dztz_13.csv\"\n",
+    "path14 = \"/home/penghua/BasestaDect/src/csv_data/dztz_14.csv\"\n",
+    "# path15 = \"/home/penghua/BasestaDect/src/csv_data/dztz_15.csv\"\n",
+    "# path16 = \"/home/penghua/BasestaDect/src/csv_data/dztz_16.csv\"\n",
+    "# path17 = \"/home/penghua/BasestaDect/src/csv_data/dztz_17.csv\"\n",
+    "# path18 = \"/home/penghua/BasestaDect/src/csv_data/dztz_18.csv\"\n",
+    "# path19 = \"/home/penghua/BasestaDect/src/csv_data/dztz_19.csv\"\n",
     "\n",
     "\n",
     "dataframe = pd.read_csv(path, names=['x','y','dis','theta','power'])\n",
@@ -64,6 +69,10 @@
     "dataframe12 = pd.read_csv(path12, names=['x','y','dis','theta','power'])\n",
     "dataframe13 = pd.read_csv(path13, names=['x','y','dis','theta','power'])\n",
     "dataframe14 = pd.read_csv(path14, names=['x','y','dis','theta','power'])\n",
+    "# dataframe15 = pd.read_csv(path15, names=['x','y','dis','theta','power'])\n",
+    "# dataframe16 = pd.read_csv(path16, names=['x','y','dis','theta','power'])\n",
+    "# dataframe17 = pd.read_csv(path17, names=['x','y','dis','theta','power'])\n",
+    "# dataframe18 = pd.read_csv(path18, names=['x','y','dis','theta','power'])\n",
     "\n",
     "\n",
     "plt.figure(figsize = (5,5), dpi = 300)\n",
@@ -84,10 +93,21 @@
     "canvas = plt.plot(dataframe12['x'], dataframe12['y'], marker='.', markersize=2, linewidth=1, color='magenta')\n",
     "canvas = plt.plot(dataframe13['x'], dataframe13['y'], marker='.', markersize=2, linewidth=1, color='darkorange')\n",
     "canvas = plt.plot(dataframe14['x'], dataframe14['y'], marker='.', markersize=2, linewidth=1, color='green')\n",
+    "# canvas = plt.plot(dataframe15['x'], dataframe15['y'], marker='.', markersize=2, linewidth=1, color='gold')\n",
+    "# canvas = plt.plot(dataframe16['x'], dataframe16['y'], marker='.', markersize=2, linewidth=1, color='blue')\n",
+    "# canvas = plt.plot(dataframe17['x'], dataframe17['y'], marker='.', markersize=2, linewidth=1, color='firebrick')\n",
+    "# canvas = plt.plot(dataframe18['x'], dataframe18['y'], marker='.', markersize=2, linewidth=1, color='orangered')\n",
     "\n",
     "canvas = plt.plot(0,0, marker='*', markersize=5, color='red')\n",
-    "plt.savefig(\"line2.jpg\",dpi=800)"
+    "# plt.savefig(\"line2.jpg\",dpi=800)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
